manifests/app/dreamkast-weaver/overlays/development/deployment-dk-weaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dk-weaver
    tier: dk-weaver
  name: dk-weaver
spec:
  selector:
    matchLabels:
      app: dk-weaver
      tier: dk-weaver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dk-weaver
        tier: dk-weaver
    spec:
      containers:
      - name: dk-weaver
        image: dk-weaver/server
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 30
          periodSeconds: 10
