manifests/app/dreamkast-weaver/overlays/development/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: dk-weaver-mysql
  labels:
    app: dk-weaver
spec:
  ports:
    - port: 3306
  selector:
    app: dk-weaver
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dk-weaver-mysql
  labels:
    app: dk-weaver
spec:
  selector:
    matchLabels:
      app: dk-weaver
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dk-weaver
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        args:
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --default-authentication-plugin=mysql_native_password
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
